--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
         <artifactId>scalatest-maven-plugin</artifactId>
       </plugin>
       <plugin>
+        <groupId>org.scalastyle</groupId>
+        <artifactId>scalastyle-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>2.6</version>
