--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>spark-velocity</artifactId>
     <groupId>corp.sap.spark.velocity</groupId>
-    <version>0.1</version>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
