Added a maven coverage plugin (jacoco)
Change-Id: Ibcc89008fe338c7b0fbd16fc7fe181aec7aa7579

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>zeppelin</artifactId>
+  <properties>
+    <minimum.code.covered.ratio>0.33</minimum.code.covered.ratio>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.apache.spark</groupId>
