--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
       <artifactId>scalaz-scalacheck-binding_${scala.binary.version}</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
