--- a/pom.xml
+++ b/pom.xml
@@ -21,17 +21,16 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.nflabs.zeppelin</groupId>
+      <groupId>org.apache.zeppelin</groupId>
       <artifactId>zeppelin-interpreter</artifactId>
       <version>0.5.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.nflabs.zeppelin</groupId>
+      <groupId>org.apache.zeppelin</groupId>
       <artifactId>zeppelin-spark</artifactId>
       <version>0.5.0-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/src/lib/zeppelin-spark-0.5.0-SNAPSHOT.jar</systemPath>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>corp.sap.spark.velocity</groupId>
