Bug fixed: Fixing tests to use mocked objects
* Added the datasource test jar to the zeppelin module
* Some tests modified to use the mocked velocity client
* Ignored test waiting for the VelocityClientMock to use the local catalog instead of the mocked one

Change-Id: Ic8f46d8c41d4b62dc83254d55c7e24d8c591f4d5

--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,16 @@
       <groupId>corp.sap.spark.velocity</groupId>
       <artifactId>datasource</artifactId>
     </dependency>
-      <dependency>
-          <groupId>corp.sap.spark.velocity</groupId>
-          <artifactId>hanadatasource</artifactId>
-      </dependency>
+    <dependency>
+      <groupId>corp.sap.spark.velocity</groupId>
+      <artifactId>datasource</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>corp.sap.spark.velocity</groupId>
+      <artifactId>hanadatasource</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.binary.version}</artifactId>
@@ -206,8 +212,10 @@
             </filter>
           </filters>
           <transformers>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+            <transformer
+                implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+            <transformer
+                implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
               <resource>reference.conf</resource>
             </transformer>
           </transformers>
