--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <artifactId>zeppelin</artifactId>
   <properties>
-    <minimum.code.covered.ratio>0.42</minimum.code.covered.ratio>
+    <minimum.code.covered.ratio>0.40</minimum.code.covered.ratio>
   </properties>
   <dependencies>
     <dependency>
@@ -186,7 +186,7 @@
         <configuration>
           <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
-          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
 
