--- a/pom.xml
+++ b/pom.xml
@@ -8,29 +8,11 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>sparkvelocity-thriftserver</artifactId>
     <properties>
         <minimum.code.covered.ratio>0</minimum.code.covered.ratio>
-        <!--This property can be interpolated by maven-dependency-plugin -->
-        <project.jarPath>${project.build.directory}/${project.artifactId}-${project.version}.jar</project.jarPath>
-        <project.testJarpath>${project.build.directory}/${project.artifactId}-${project.version}-tests.jar</project.testJarpath>
-        <sparkJars>${project.jarPath},
-            ${project.testJarpath},
-            ${corp.sap.spark.velocity:core:jar},
-            ${corp.sap.spark.velocity:datasource:jar},
-            ${corp.sap.spark.velocity:datasource:test-jar:tests},
-            ${com.google.protobuf:protobuf-java:jar},
-            ${corp.sap.spark.velocity:core:jar},
-            ${net.java.dev.jna:jna:jar},
-            ${com.sap.hl.jdbc:hl-jdbc:jar},
-            ${com.sap.hanalite:vcatalog-client-zk:jar},
-            ${com.sap.hanalite:vcatalog-common:jar},
-            ${com.sap.hanalite:vcatalog-client-local:jar}
-        </sparkJars>
     </properties>
     <dependencies>
-
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_${scala.binary.version}</artifactId>
@@ -44,12 +26,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive-thriftserver_${scala.binary.version}</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_${scala.binary.version}</artifactId>
-            <scope>provided</scope>
+            <version>${spark.version}</version>
         </dependency>
         <dependency>
             <groupId>corp.sap.spark.velocity</groupId>
@@ -89,26 +66,8 @@
                     <junitxml>.</junitxml>
                     <filereports>WDF TestSuite.txt</filereports>
                     <forkMode>once</forkMode>
-                    <argLine>-Xmx1G</argLine>
+                    <argLine>${argLine} -Xmx1024M -XX:MaxPermSize=700M</argLine>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>test</id>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <phase>integration-test</phase>
-                        <configuration>
-                            <tagsToExclude>
-                                corp.sap.scalatest.IntegrationTest,corp.sap.scalatest.IntegrationSuite,corp.sap.scalatest.UpstreamSparkSuite
-                            </tagsToExclude>
-                            <systemProperties>
-                                <sparkJars>${sparkJars}</sparkJars>
-                                <sbinDir>${project.build.directory}/../sbin</sbinDir>
-                            </systemProperties>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.scalastyle</groupId>
@@ -126,15 +85,6 @@
                         </goals>
                         <phase>pre-integration-test</phase>
                     </execution>
-                    <!--
-                    <execution>
-                      <id>dependency-property-analyze</id>
-                      <goals>
-                        <goal>list</goal>
-                      </goals>
-                      <phase>pre-integration-test</phase>
-                    </execution>
-                    -->
                 </executions>
             </plugin>
         </plugins>
@@ -181,7 +131,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>
-                                        org.apache.spark.sql.hive.velocity.thriftserver.SparkVelocityThriftServer
+                                      org.apache.spark.sql.hive.thriftserver.SparkVelocityThriftServer
                                     </mainClass>
                                 </transformer>
                                 <transformer
