--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,7 @@
         <configuration>
           <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
-          <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=256m -XX:MaxHeapSize=512m</argLine>
         </configuration>
       </plugin>
 
