--- a/sparkvelocity-thriftserver/pom.xml
+++ b/sparkvelocity-thriftserver/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spark-velocity</artifactId>
+        <artifactId>spark-velocity-extensions</artifactId>
         <groupId>corp.sap.spark.velocity</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>sparkvelocity-thriftserver</artifactId>
@@ -31,16 +31,7 @@
         <dependency>
             <groupId>corp.sap.spark.velocity</groupId>
             <artifactId>core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>corp.sap.spark.velocity</groupId>
-            <artifactId>datasource</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>corp.sap.spark.velocity</groupId>
-            <artifactId>datasource</artifactId>
-            <scope>test</scope>
-            <type>test-jar</type>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
     <build>
