--- a/zeppelin/pom.xml
+++ b/zeppelin/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spark-velocity</artifactId>
+    <artifactId>spark-velocity-extensions</artifactId>
     <groupId>corp.sap.spark.velocity</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -33,19 +33,10 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>corp.sap.spark.velocity</groupId>
-      <artifactId>datasource</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>corp.sap.spark.velocity</groupId>
-      <artifactId>datasource</artifactId>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>corp.sap.spark.velocity</groupId>
-      <artifactId>hanadatasource</artifactId>
-    </dependency>
+        <groupId>corp.sap.spark.velocity</groupId>
+        <artifactId>core</artifactId>
+        <version>${project.version}</version>
+      </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.binary.version}</artifactId>
