--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sap.spark.velocity</groupId>
   <artifactId>spark-velocity-parent</artifactId>
-  <version>0.0.3-SNAPSHOT</version>
+  <version>0.0.4-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Spark Velocity Extensions Project</name>
   <modules>
@@ -32,6 +32,7 @@
    <module>dist</module>
   </modules>
   <properties>
+    <velocity.core.version>0.0.4-SNAPSHOT</velocity.core.version>
     <mockito.version>1.10.19</mockito.version>
     <scala.version>2.10.4</scala.version>
     <scala.binary.version>2.10</scala.binary.version>
@@ -118,12 +119,12 @@
       <dependency>
         <groupId>com.sap.spark.velocity</groupId>
         <artifactId>core</artifactId>
-        <version>${project.version}</version>
+        <version>${velocity.core.version}</version>
       </dependency>
       <dependency>
         <groupId>com.sap.spark.velocity</groupId>
         <artifactId>core</artifactId>
-        <version>${project.version}</version>
+        <version>${velocity.core.version}</version>
         <type>test-jar</type>
       </dependency>
       <dependency>
