* Introduced dist package for delivery
Change-Id: Ib5a7ebcc4d9b142ee49f03701025489961d8321a

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
    <module>core</module>
    <module>zeppelin</module>
     <module>sparkvelocity-thriftserver</module>
+   <module>dist</module>
   </modules>
   <properties>
     <mockito.version>1.10.19</mockito.version>
