*Change package name from corp.sap.spark.velocity to com.sap.spark.velocity
-changed the project version to 0.0.2-SNAPHSOT so it does not effect current projects

Change-Id: I3a1049c42b135cd6c920ae151b019ff113d8407a

--- a/zeppelin/pom.xml
+++ b/zeppelin/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>spark-velocity-parent</artifactId>
-    <groupId>corp.sap.spark.velocity</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>com.sap.spark.velocity</groupId>
+    <version>0.0.2-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -33,7 +33,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-        <groupId>corp.sap.spark.velocity</groupId>
+        <groupId>com.sap.spark.velocity</groupId>
         <artifactId>core</artifactId>
         <version>${project.version}</version>
       </dependency>
