--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>corp.sap.spark.velocity</groupId>
+  <groupId>com.sap.spark.velocity</groupId>
   <artifactId>spark-velocity-parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Spark Velocity Extensions Project</name>
   <modules>
@@ -116,12 +116,12 @@
         <version>${scalaz.version}</version>
       </dependency>
       <dependency>
-        <groupId>corp.sap.spark.velocity</groupId>
+        <groupId>com.sap.spark.velocity</groupId>
         <artifactId>core</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>corp.sap.spark.velocity</groupId>
+        <groupId>com.sap.spark.velocity</groupId>
         <artifactId>core</artifactId>
         <version>${project.version}</version>
         <type>test-jar</type>
