* changed zeppelin dependencies
  - the artifact names in nexus.sap are 0.5.x-incubating-SNAPSHOT
  - the public repository we used before, does not have
    zeppelin anymore

Change-Id: I76d1a5d5d0183fa1dac037da5ab1d8ac6e5469a3

--- a/zeppelin/pom.xml
+++ b/zeppelin/pom.xml
@@ -23,13 +23,13 @@
     <dependency>
       <groupId>org.apache.zeppelin</groupId>
       <artifactId>zeppelin-interpreter</artifactId>
-      <version>0.5.0-SNAPSHOT</version>
+      <version>0.5.1-incubating-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.zeppelin</groupId>
       <artifactId>zeppelin-spark</artifactId>
-      <version>0.5.0-SNAPSHOT</version>
+      <version>0.5.1-incubating-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -151,18 +151,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <repositories>
-    <repository>
-      <id>snapshots-repo</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
   <build>
     <plugins>
       <plugin>
