--- a/sparkvelocity-thriftserver/pom.xml
+++ b/sparkvelocity-thriftserver/pom.xml
@@ -38,6 +38,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
+              <version>2.6</version>
                 <executions>
                     <execution>
                         <id>prepare-test-jar</id>
