Bug 91065 * making Jenkins stdout better readable:   * activate outout to stdout of scalatest results, with options   * testcase   * withput color (W)   * runtime   (D)   * final report of failed testcases including short stack trace (T)
Change-Id: I8cfe3fcf135217440c349b85ca0dd803e6424b42

--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,10 @@
           <configuration>
             <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
             <junitxml>.</junitxml>
+            <!-- activating the stdout reporter such that test results are also visible in the
+                 maven or Jenkins build. See http://www.scalatest.org/user_guide/using_the_runner for
+                 explanation of the options. -->
+            <stdout>WDT</stdout>
             <filereports>WDF TestSuite.txt</filereports>
             <!-- TODO: html report generation does not work for project thriftserver, so: defined for each sub project
                  <htmlreporters>${project.build.directory}/surefire-reports</htmlreporters>
