* disabled html reports for zeppelin module
- the 0.5.1-incubating-versions of zeppelin-interpreter
  and zeppelin-spark are removed from nexus (timed out probably)
  so I had to change to 0.5.0-incubating
- there was a problem with asm versions in the zeppelin module
  so I disabled html reporting as a quick work around
  because if we do not make a work around, the extensions
  package will not be able to build (since it won't find
  0.5.1-incubating-SNAPSHOT versions for zeppelin dependencies)

Change-Id: I1a90f3d6e75b7b9746676bd6c63dce20bc56929b

--- a/zeppelin/pom.xml
+++ b/zeppelin/pom.xml
@@ -23,13 +23,13 @@
     <dependency>
       <groupId>org.apache.zeppelin</groupId>
       <artifactId>zeppelin-interpreter</artifactId>
-      <version>0.5.1-incubating-SNAPSHOT</version>
+      <version>0.5.0-incubating</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.zeppelin</groupId>
       <artifactId>zeppelin-spark</artifactId>
-      <version>0.5.1-incubating-SNAPSHOT</version>
+      <version>0.5.0-incubating-sap-01</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -149,17 +149,19 @@
       <version>1.10.19</version>
       <scope>test</scope>
     </dependency>
-
+<!--
+    TODO: we commented this out because of some incompatibility between asm versions
     <dependency>
-      <groupId>org.pegdown</groupId>  <!-- required to create hmtl test results output -->
+      <groupId>org.pegdown</groupId>  &lt;!&ndash; required to create hmtl test results output &ndash;&gt;
       <artifactId>pegdown</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>asm</groupId>          <!-- required by pegdown -->
+      <groupId>asm</groupId>          &lt;!&ndash; required by pegdown &ndash;&gt;
       <artifactId>asm</artifactId>
       <scope>test</scope>
     </dependency>
+-->
 
   </dependencies>
   <build>
@@ -167,9 +169,11 @@
       <plugin>
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest-maven-plugin</artifactId>
+        <!-- TODO: we commented this out because of some incompatibility between asm versions
         <configuration>
           <htmlreporters>${project.build.directory}/surefire-reports</htmlreporters>
         </configuration>
+        -->
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
