--- a/core/pom.xml
+++ b/core/pom.xml
@@ -85,6 +85,7 @@
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest-maven-plugin</artifactId>
         <configuration>
+          <argLine>-Xmx2g -XX:MaxPermSize=1024m -XX:ReservedCodeCacheSize=1024m</argLine>
           <htmlreporters>${project.build.directory}/surefire-reports</htmlreporters>
         </configuration>
       </plugin>
