Introduced new naming scheme
Removing Velocity and replacing it with SAP
Bumped version to 0.0.8
Some traits/classes exist with old and new name with deprecation
(to be removed with 0.0.9 finally)
feedback incorporated
the scripts for starting the thriftserver will be done seperatedly

Change-Id: Ifd3a77f11f0fe7a49652a650c0b3761be39453a0

--- a/pom.xml
+++ b/pom.xml
@@ -20,19 +20,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.sap.spark.velocity</groupId>
-  <artifactId>spark-velocity-parent</artifactId>
-  <version>0.0.7-SNAPSHOT</version>
+  <groupId>com.sap.spark</groupId>
+  <artifactId>spark-sap-parent</artifactId>
+  <version>0.0.8-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Spark Velocity Extensions Project</name>
+  <name>Spark SAP Extensions Project</name>
   <modules>
     <module>core</module>
     <module>zeppelin</module>
-    <module>sparkvelocity-thriftserver</module>
+    <module>sap-thriftserver</module>
     <module>dist</module>
   </modules>
   <properties>
-    <velocity.core.version>0.0.7-SNAPSHOT</velocity.core.version>
+    <sapextension.core.version>0.0.8-SNAPSHOT</sapextension.core.version>
     <mockito.version>1.10.19</mockito.version>
     <scala.version>2.10.4</scala.version>
     <scala.binary.version>2.10</scala.binary.version>
@@ -112,14 +112,14 @@
         <version>${scalaz.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.sap.spark.velocity</groupId>
+        <groupId>com.sap.spark</groupId>
         <artifactId>core</artifactId>
-        <version>${velocity.core.version}</version>
+        <version>${sapextension.core.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.sap.spark.velocity</groupId>
+        <groupId>com.sap.spark</groupId>
         <artifactId>core</artifactId>
-        <version>${velocity.core.version}</version>
+        <version>${sapextension.core.version}</version>
         <type>test-jar</type>
       </dependency>
       <dependency>
