--- a/zeppelin/pom.xml
+++ b/zeppelin/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spark-velocity-parent</artifactId>
-    <groupId>com.sap.spark.velocity</groupId>
-    <version>0.0.7-SNAPSHOT</version>
+    <artifactId>spark-sap-parent</artifactId>
+    <groupId>com.sap.spark</groupId>
+    <version>0.0.8-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -33,8 +33,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.sap.spark.velocity</groupId>
+      <groupId>com.sap.spark</groupId>
       <artifactId>core</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
