* disable tests for leanDI build
- disabling all tests for leanDI build

Change-Id: I93362e6b2b8f78ffb2bbe63e2fe12cce8a4ac079

--- a/pom.xml
+++ b/pom.xml
@@ -333,6 +333,17 @@
 
   <profiles>
     <profile>
+      <id>release.build</id>
+      <activation>
+        <property>
+          <name>ldi.releaseBuild</name>
+        </property>
+      </activation>
+      <properties>
+        <maven.test.skip>true</maven.test.skip>
+      </properties>
+    </profile>
+    <profile>
       <id>integration-test</id>
       <build>
         <pluginManagement>
