* fall back to SNAPSHOT versions
Change-Id: Idac39e80b257150938cc1e6e6024532d521df29e

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sap.spark</groupId>
   <artifactId>spark-sap-parent</artifactId>
-  <version>0.3.3</version>
+  <version>0.0.8-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Spark SAP Extensions Project</name>
   <modules>
@@ -32,6 +32,7 @@
     <module>dist</module>
   </modules>
   <properties>
+    <sapextension.core.version>0.0.8-SNAPSHOT</sapextension.core.version>
     <mockito.version>1.10.19</mockito.version>
     <scala.version>2.10.4</scala.version>
     <scala.binary.version>2.10</scala.binary.version>
@@ -113,12 +114,12 @@
       <dependency>
         <groupId>com.sap.spark</groupId>
         <artifactId>core</artifactId>
-        <version>0.3.3</version>
+        <version>${sapextension.core.version}</version>
       </dependency>
       <dependency>
         <groupId>com.sap.spark</groupId>
         <artifactId>core</artifactId>
-        <version>0.3.3</version>
+        <version>${sapextension.core.version}</version>
         <type>test-jar</type>
       </dependency>
       <dependency>
