maven-versions-plugin: Update sapextension.core.version auto.
- Now mvn versions:updat-properties will set
  sapextension.core.version property.

Change-Id: I1d3067c880a7c41c0bd812fbba40cbf74783653c

--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,9 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>versions-maven-plugin</artifactId>
           <version>2.1</version>
+          <configuration>
+            <includeProperties>sapextension.core.version</includeProperties>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
