Tests: Create TestUtils.
- Removed CsvGetter in core/main, since its only used in tests
  and it's not about CSV anymore. Moved its method to TestUtils.
- Moved WithSparkContext.getSettings to TestUtils, since it's
  useful in other classes.

Change-Id: Ib600838ef9e13efaf879d4ee94e5bea0afbe02fc

--- a/sap-thriftserver/pom.xml
+++ b/sap-thriftserver/pom.xml
@@ -33,6 +33,13 @@
             <artifactId>core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.sap.spark</groupId>
+            <artifactId>core</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
 
         <!-- TODO: active this for html result generation in the scalatest plugin
         <dependency>
