--- a/zeppelin/pom.xml
+++ b/zeppelin/pom.xml
@@ -38,6 +38,13 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.sap.spark</groupId>
+      <artifactId>core</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.binary.version}</artifactId>
       <version>2.2.1</version>
