Split SapHiveContext and SapSqlContext. Bug 93831.
- Create SapHiveContext and SapSqlContext.
- Moved SQLContext extensions to org.apache.spark.sql.extension.
- Use ParserDialect instead of SparkSqlParser.
- Run tests twice, once with SapSqlContext and once with SapHiveContext.

Change-Id: I6c042ca8cd6632e7874066ae5a85241f6aa0d85c

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -81,6 +81,26 @@
       <plugin>
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>test</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>test-with-hive-context</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <forkMode>once</forkMode>
+              <systemProperties>
+                <test.with.hive.context>true</test.with.hive.context>
+              </systemProperties>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.scalastyle</groupId>
