--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,6 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>core</artifactId>
+  <name>SAP Spark Core</name>
   <properties>
     <minimum.code.covered.ratio>0.65</minimum.code.covered.ratio>
   </properties>
