--- a/sap-thriftserver/pom.xml
+++ b/sap-thriftserver/pom.xml
@@ -8,6 +8,7 @@
         <version>1.1.11</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <name>SAP Thrift Server</name>
     <artifactId>sap-thriftserver</artifactId>
     <properties>
         <minimum.code.covered.ratio>0</minimum.code.covered.ratio>
