--- a/zeppelin/pom.xml
+++ b/zeppelin/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-
+  <name>SAP Spark Zeppelin Interpreter</name>
   <artifactId>zeppelin</artifactId>
   <properties>
     <minimum.code.covered.ratio>0.40</minimum.code.covered.ratio>
