Add more Scaladoc to core key components.
- Add root Scaladoc for core.
- Add better SapSQLContext and SapSqlParser scaladocs.

Change-Id: Ie3484de0cbd65a92a5e070592ceed945019aefa7

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
         <version>${scala.maven.plugin.version}</version>
+        <configuration>
+          <args>
+            <arg>-doc-root-content</arg>
+            <arg>${basedir}/src/main/rootdoc.txt</arg>
+          </args>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
