* Test execution enhancements (Bug 94595)
Add arguments to let developer alter the
build process, i.e., for "testing the tests"
and "testing the build".

- Allow to only execute integration tests using:
  "mvn integration-tests -DskipUTs"
- Allow to run whole build pipeline without
  integration tests using:
  "mvn clean install -DskipITs"
- Added "log4j.properties" tp zeppelin to make
  structure consistent

Change-Id: I0ba900ddc19eb18e0cbd1fe2355b29653e055b77

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,9 @@
     <dependency.locations.enabled>false</dependency.locations.enabled>
     <!-- Workaround to fix a bug related to report plugin -->
     <topSiteURL>http://sap.corp/</topSiteURL>
+    <skipTests>false</skipTests>
+    <skipUTs>${skipTests}</skipUTs>
+    <skipITs>${skipTests}</skipITs>
   </properties>
 
   <distributionManagement>
@@ -249,6 +252,7 @@
                 <suffixes>
                   Suite
                 </suffixes>
+                <skipTests>${skipUTs}</skipTests>
               </configuration>
             </execution>
             <execution>
@@ -261,6 +265,7 @@
                 <suffixes>
                   SuiteIT
                 </suffixes>
+                <skipTests>${skipITs}</skipTests>
               </configuration>
             </execution>
           </executions>
