--- a/pom.xml
+++ b/pom.xml
@@ -398,6 +398,7 @@
             <id>attach-sources</id>
             <goals>
               <goal>jar</goal>
+              <goal>test-jar</goal>
             </goals>
           </execution>
         </executions>
