Jackson version changed due classpath problems (bug 98669)
- Using version 2.4.x instead of 2.6.x on the catalog to be synced with
  the version of Spark

Change-Id: I93e87abed8f307ee21e28306f74234916cf84d8d

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <module>dist</module>
   </modules>
   <properties>
+    <jackson.version>2.4.4</jackson.version>
     <mockito.version>1.10.19</mockito.version>
     <scala.version>2.10.4</scala.version>
     <scala.binary.version>2.10</scala.binary.version>
@@ -98,6 +99,11 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-hive_${scala.binary.version}</artifactId>
