* maven coordinate "classifier" for build artifacts
- in order to distinguish different build environments
  (e.g. spark versions, hadoop versions) the maven
  build artifacts are tagged with the "classifier"
  coordinate.
- this happens for the "jar" and "test-jar" goal
- currently switching between spark 1.4 and 1.5
  is supported (classifier spark${spark.version} )
- with spark 1.4 build (default) the non-classified
  artifacts are produced.
  spark 1.5 build produces only classified artifacts
- dependencies are adjusted to the proper classifiers

Change-Id: I7318d269359cd6f4ea2852fb468ecaab435dd10f

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>spark-sap-parent</artifactId>
     <groupId>com.sap.spark</groupId>
-    <version>1.2.6</version>
+    <version>1.2.7</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -18,6 +18,8 @@
     <dependency>
       <groupId>com.sap.spark</groupId>
       <artifactId>${compat.artifact.id}</artifactId>
+      <version>${project.version}</version>
+      <classifier>${build.classifier}</classifier>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
