--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sap.spark</groupId>
   <artifactId>spark-sap-parent</artifactId>
-  <version>1.2.6</version>
+  <version>1.2.7</version>
   <packaging>pom</packaging>
   <name>Spark SAP Extensions Project</name>
   <modules>
@@ -62,6 +62,8 @@
     <skipTests>false</skipTests>
     <skipUTs>${skipTests}</skipUTs>
     <skipITs>${skipTests}</skipITs>
+    <build.classifier>spark${spark.version}</build.classifier>  <!-- TODO: include hadoop version when needed (MapR) -->
+    <build.testjar.classifier>${build.classifier}tests</build.testjar.classifier>
   </properties>
 
   <distributionManagement>
@@ -404,6 +406,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
+
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
@@ -434,13 +437,15 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <version>2.4</version>
         <executions>
           <execution>
-            <id>attach-sources</id>
+           <id>attach-sources</id>
+            <phase>package</phase>
             <goals>
               <goal>jar</goal>
               <goal>test-jar</goal>
@@ -448,10 +453,66 @@
           </execution>
         </executions>
       </plugin>
+
+      <!-- ensure that jar and test-jar is created on all levels-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.6</version>
+        <executions>
+          <execution>
+            <id>the-jar</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>test-jar</id>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- install the binary artifacts with explicit classifier-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId>
+        <version>2.5.2</version>
+        <executions>
+
+          <execution>
+            <id>file-install-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>install-file</goal>
+            </goals>
+            <configuration>
+              <file>${project.build.directory}/${project.artifactId}-${project.version}.jar</file>
+              <classifier>${build.classifier}</classifier>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>file-install-test-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>install-file</goal>
+            </goals>
+            <configuration>
+              <file>${project.build.directory}/${project.artifactId}-${project.version}-tests.jar</file>
+              <classifier>${build.testjar.classifier}</classifier>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
   </build>
 
   <profiles>
+
     <profile>
       <id>spark-1.5</id>
       <properties>
@@ -482,7 +543,34 @@
           </dependency>
         </dependencies>
       </dependencyManagement>
+
+      <build>
+       <pluginManagement>
+         <plugins>
+           <!-- disabling default install of artifacts -->
+           <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-install-plugin</artifactId>
+             <version>2.5.2</version>
+             <executions>
+               <execution>
+                 <id>default-install</id>
+                 <phase>install</phase>
+                 <goals>
+                   <goal>install</goal>
+                 </goals>
+                 <configuration>
+                   <skip>true</skip>
+                 </configuration>
+               </execution>
+             </executions>
+           </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
     </profile>
+
+
     <profile>
       <id>release.build</id>
       <activation>
@@ -507,6 +595,8 @@
         </pluginManagement>
       </build>
     </profile>
+
+
     <profile>
       <id>fast-tests</id>
       <activation>
