--- a/sap-thriftserver/pom.xml
+++ b/sap-thriftserver/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spark-sap-parent</artifactId>
         <groupId>com.sap.spark</groupId>
-        <version>1.2.6</version>
+        <version>1.2.7</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <name>SAP Thrift Server</name>
@@ -32,10 +32,14 @@
         <dependency>
             <groupId>com.sap.spark</groupId>
             <artifactId>${compat.artifact.id}</artifactId>
+            <version>${project.version}</version>
+            <classifier>${build.classifier}</classifier>
         </dependency>
         <dependency>
             <groupId>com.sap.spark</groupId>
             <artifactId>core</artifactId>
+            <version>${project.version}</version>
+            <classifier>${build.classifier}</classifier>
         </dependency>
         <dependency>
             <groupId>com.sap.spark</groupId>
@@ -103,7 +107,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-shade-plugin</artifactId>
-                        <version>2.3</version>
+                        <version>2.4.2</version>
                         <configuration>
                             <finalName>
                                 ${project.artifactId}-${project.version}-thriftserver
