* maven classifier, part 2
- add invocation of maven-deploy-plugin:deploy-file to support
  deployment of classified artifacts

Change-Id: Id163bdeb277780a3926988f1fe4952b02cade35d

--- a/pom.xml
+++ b/pom.xml
@@ -500,6 +500,47 @@
         </executions>
       </plugin>
 
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <!-- <version>2.5.2</version> -->
+        <executions>
+          <execution>
+            <id>file-deploy-jar</id>
+            <phase>deploy</phase>
+            <goals>
+              <goal>deploy-file</goal>
+            </goals>
+            <configuration>
+              <file>${project.build.directory}/${project.artifactId}-${project.version}.jar</file>
+              <artifactId>${project.artifactId}</artifactId>
+              <groupId>${project.groupId}</groupId>
+              <version>${project.version}</version>
+              <classifier>${build.classifier}</classifier>
+              <packaging>jar</packaging>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>file-deploy-testjar</id>
+            <phase>deploy</phase>
+            <goals>
+              <goal>deploy-file</goal>
+            </goals>
+            <configuration>
+              <file>${project.build.directory}/${project.artifactId}-${project.version}-tests.jar</file>
+              <artifactId>${project.artifactId}</artifactId>
+              <groupId>${project.groupId}</groupId>
+              <version>${project.version}</version>
+              <classifier>${build.testjar.classifier}</classifier>
+              <packaging>jar</packaging>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+
     </plugins>
   </build>
 
