--- a/pom.xml
+++ b/pom.xml
@@ -504,7 +504,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <!-- <version>2.5.2</version> -->
+        <version>2.8.2</version>
         <executions>
           <execution>
             <id>file-deploy-jar</id>
