--- a/zeppelin/pom.xml
+++ b/zeppelin/pom.xml
@@ -23,14 +23,21 @@
     <dependency>
       <groupId>org.apache.zeppelin</groupId>
       <artifactId>zeppelin-interpreter</artifactId>
-      <version>0.5.0-incubating</version>
+      <version>0.5.6-incubating-sap-01</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.zeppelin</groupId>
       <artifactId>zeppelin-spark</artifactId>
-      <version>0.5.0-incubating-sap-03</version>
+      <version>0.5.6-incubating-sap-01</version>
       <scope>provided</scope>
+    </dependency>
+    <!-- library is needed for the tests -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-repl_${scala.binary.version}</artifactId>
+      <version>${spark.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.sap.spark</groupId>
