--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sap.spark</groupId>
   <artifactId>spark-sap-parent</artifactId>
-  <version>1.3.13</version>
+  <version>1.3.14</version>
   <packaging>pom</packaging>
   <name>Spark SAP Extensions Project</name>
   <modules>
@@ -39,9 +39,7 @@
     <!-- scala 2.10.x are binary compatible so if different components
          require different 2.10.x then there is no need to issue warnings -->
     <scala.compat.version>2.10</scala.compat.version>
-    <spark15.version>1.5.2</spark15.version>
-    <!-- hardcoded to 1.5.2 now, simplify later -->
-    <spark.version>${spark15.version}</spark.version>
+    <spark.version>1.6.1</spark.version>
     <scalacheck.version>1.11.3</scalacheck.version>
     <scalaz.version>7.1.1</scalaz.version>
     <hadoop.version>2.6.0</hadoop.version>
@@ -173,12 +171,12 @@
       <dependency>
         <groupId>com.sap.spark</groupId>
         <artifactId>core</artifactId>
-        <version>1.3.13</version>
+        <version>1.3.14</version>
       </dependency>
       <dependency>
         <groupId>com.sap.spark</groupId>
         <artifactId>core</artifactId>
-        <version>1.3.13</version>
+        <version>1.3.14</version>
         <type>test-jar</type>
       </dependency>
 
