* get ERP currency conversion via reflection
- removes hard dependency on com.sap.hl.currency
- loads ERP conversion method at runtime via reflection
- still includes the dependency in maven profiles
  'full-tests' and 'push-validation'
- the profile 'push-validation' should be used for
  push-validation

Change-Id: Iee9ab9ec591abd6d4c930ff315a3797ec2e46e3d

--- a/pom.xml
+++ b/pom.xml
@@ -440,6 +440,13 @@
     </profile>
     <profile>
       <id>full-tests</id>
+      <dependencies>
+        <dependency>
+          <groupId>com.sap.hl.currency</groupId>
+          <artifactId>currency-conversion</artifactId>
+          <version>1.1.1</version>
+        </dependency>
+      </dependencies>
       <build>
         <pluginManagement>
           <plugins>
@@ -456,6 +463,31 @@
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.scalatest</groupId>
+              <artifactId>scalatest-maven-plugin</artifactId>
+              <configuration>
+                <tagsToExclude>
+                  org.scalatest.tags.Slow,com.sap.tags.ExternalLibraryNeeded
+                </tagsToExclude>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+    <profile>
+      <id>push-validation</id>
+      <dependencies>
+        <dependency>
+          <groupId>com.sap.hl.currency</groupId>
+          <artifactId>currency-conversion</artifactId>
+          <version>1.1.1</version>
+        </dependency>
+      </dependencies>
       <build>
         <pluginManagement>
           <plugins>
