* throw Currency Conversion error lazy (bug 114016)
- this circumvents a problem with the HiveContext where
  CurrencyConversionExceptions are not propagated to the user
- additionally, switch off stdout logging for tests

Change-Id: I5697e0a16b4c2e8f43b1854d591b8ff9ae59650b

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     <scalaz.version>7.1.1</scalaz.version>
     <hadoop.version>2.6.0</hadoop.version>
     <apache.curator.version>2.4.0</apache.curator.version>
+    <sap.currency.version>1.1.1</sap.currency.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <minimum.code.covered.ratio>0.80</minimum.code.covered.ratio>
@@ -485,7 +486,7 @@
         <dependency>
           <groupId>com.sap.hl.currency</groupId>
           <artifactId>currency-conversion</artifactId>
-          <version>1.1.1</version>
+          <version>${sap.currency.version}</version>
         </dependency>
       </dependencies>
       <build>
