--- a/core/src/test/resources/log4j.properties
+++ b/core/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=WARN, stdout
+log4j.rootLogger=WARN, logfile
 
 log4j.logger.corp.sap=DEBUG
 log4j.logger.org.apache.spark.sql=INFO
@@ -12,3 +12,12 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{3}:%L - %m%n
+
+# Define file appender
+log4j.appender.logfile=org.apache.log4j.FileAppender
+log4j.appender.logfile.File=target/maven-tests.out
+log4j.appender.logfile.ImmediateFlush=true
+log4j.appender.logfile.Append=true
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{3}:%L - %m%n
+
