--- a/core/pom.xml
+++ b/core/pom.xml
@@ -67,6 +67,12 @@
       <artifactId>asm</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.sap.hl.currency</groupId>
+      <artifactId>currency-conversion</artifactId>
+      <version>${sap.currency.version}</version>
+    </dependency>
+
   </dependencies>
 
 
