--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <scalaz.version>7.1.1</scalaz.version>
     <hadoop.version>2.6.0</hadoop.version>
     <apache.curator.version>2.4.0</apache.curator.version>
-    <sap.currency.version>1.1.1</sap.currency.version>
+    <sap.currency.version>1.3.0</sap.currency.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <minimum.code.covered.ratio>0.80</minimum.code.covered.ratio>
@@ -210,7 +210,6 @@
         <version>3.2</version>
         <scope>test</scope>
       </dependency>
-
     </dependencies>
   </dependencyManagement>
 
@@ -441,13 +440,6 @@
     </profile>
     <profile>
       <id>full-tests</id>
-      <dependencies>
-        <dependency>
-          <groupId>com.sap.hl.currency</groupId>
-          <artifactId>currency-conversion</artifactId>
-          <version>1.1.1</version>
-        </dependency>
-      </dependencies>
       <build>
         <pluginManagement>
           <plugins>
@@ -472,7 +464,7 @@
               <artifactId>scalatest-maven-plugin</artifactId>
               <configuration>
                 <tagsToExclude>
-                  org.scalatest.tags.Slow,com.sap.tags.ExternalLibraryNeeded
+                  org.scalatest.tags.Slow
                 </tagsToExclude>
               </configuration>
             </plugin>
@@ -482,13 +474,6 @@
     </profile>
     <profile>
       <id>push-validation</id>
-      <dependencies>
-        <dependency>
-          <groupId>com.sap.hl.currency</groupId>
-          <artifactId>currency-conversion</artifactId>
-          <version>${sap.currency.version}</version>
-        </dependency>
-      </dependencies>
       <build>
         <pluginManagement>
           <plugins>
